manifests/cam-ingress-default.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cam-ingress-default
spec:
  tls:
    - hosts:
      - cam.gxfs.dev
      secretName: wildcard-gxfs-dev
  ingressClassName: nginx
  rules:
    - host: cam.gxfs.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cam-api-gateway 
              port:
                number: 8080
